# ebay-scraping

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: BUG.md  REQUEST.md
grafana/data/dashboards/: view.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
influxdb/initdb.d/: init.iql
mariadb/initdb.d/: init.sql
scraper/: Dockerfile  main.py  pyproject.toml  scraper.py
