[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Tadaren ptymaato@yahoo.co.jp"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
influxdb = "^5.3.1"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
